--- a/workflows/rmats/Snakefile
+++ b/workflows/rmats/Snakefile
@@ -11,9 +11,10 @@ rule rMATSBamList:
     script: "scripts/list_bams.py"
 
 rule RunrMATS:
-    input: expand(path.join(RMATS_DIR, "lists", "{condition}.list"), condition=CONDITIONS)
-    output: path.join(RMATS_DIR, "{comparison}", "SE.MATS.JCEC.txt")
-    threads: 6
+    input:
+        expand(path.join(RMATS_DIR, "lists", "{condition}.list"), condition=CONDITIONS)
+    output:
+        path.join(RMATS_DIR, "{comparison}", "SE.MATS.JCEC.txt")
     params:
         annotation = ANNOTATION,
         comparison = "{comparison}",
@@ -21,6 +22,7 @@ rule RunrMATS:
         star_idx = path.join(STAR_DIR, "index"),
         cstat = config["parameters"]["rmats"]["cstat"],
         list_dir = path.join(RMATS_DIR, "lists"),
+        output_dir = path.join(RMATS_DIR, "{comparison}"),
         partition = "main",
         nodes = "1",
         ntasks = "6",
@@ -28,9 +30,21 @@ rule RunrMATS:
         mem = "8G",
         mail_user = "didrio87@zedat.fu-berlin.de",
         mail_type = "end"
-    log: path.join(LOG_DIR, "rmats", "run", "{comparison}.log")
-    conda: "envs/rmats.yml"
-    script: "scripts/run_rmats.py"
+    singularity:
+        "library://agheyd/default/rmats:latest"
+    log:
+        path.join(LOG_DIR, "rmats", "run", "{comparison}.log")
+    shell:
+        '''
+        comp={params.comparison}
+        C1=${{comp%%_vs_*}}
+        C2=${{comp##*_vs_}}
+        list_dir={params.list_dir}
+        L1=${{list_dir}}/${{C1}}.list
+        L2=${{list_dir}}/${{C2}}.list
+
+        rmats.py --b1 $L1 --b2 $L2 -t paired --readLength {params.read_len} --gtf {params.annotation} --bi {params.star_idx} --od {params.output_dir} --nthread {params.ntasks} --cstat {params.cstat}
+        '''
 
 rule AddrMATSCoord:
     input: rules.RunrMATS.output
