--- a/workflows/rmats/Snakefile
+++ b/workflows/rmats/Snakefile
@@ -28,8 +28,8 @@ rule RunrMATS:
         ntasks = "6",
         time = "06:00:00",
         mem = "8G",
-        mail_user = "didrio87@zedat.fu-berlin.de",
-        mail_type = "end"
+        mail_user = EMAIL,
+        mail_type = EMAIL_TYPE
     singularity:
         "library://agheyd/default/rmats:latest"
     log:
