--- a/workflows/post_process/Snakefile
+++ b/workflows/post_process/Snakefile
@@ -11,7 +11,7 @@ rule OverlapAll:
         ntasks = "4",
         time = "00:20:00",
         mem = "8G",
-        mail_user = "didrio87@zedat.fu-berlin.de",
-        mail_type = "end"
+        mail_user = EMAIL,
+        mail_type = EMAIL_TYPE
     script:
         "scripts/overlap.py"
