Changed to singularity

--- a/workflows/miso/Snakefile
+++ b/workflows/miso/Snakefile
@@ -1,20 +1,21 @@
 #Local rules
-localrules: MISOBamList, MergeSum, MergeComp, AddMisoCoord
+localrules: MergeSum, MergeComp, AddMisoCoord
 
-rule MISOBamList:
-    input: expand(path.join(STAR_DIR, "alignments", "{sample}", "Aligned.sortedByCoord.out.bam"), sample=SAMPLES)
-    output: path.join(STAR_DIR, "merged_alignments", "lists", "{condition}.list")
-    threads: 1
-    params:
-        condition = "{condition}",
-        bam_dir = path.join(STAR_DIR, "alignments")
-    script: "scripts/create_bam_list.py"
+def mergeInput(wildcards):
+
+    samples = sorted(SAMPLE_SHEET[SAMPLE_SHEET["condition"] == wildcards.condition].index)
+    bam_files = [path.join(STAR_DIR, "alignments", "{}".format(x), "Aligned.sortedByCoord.out.bam") for x in samples]
+    bam_input = " ".join(bam_files)
+
+    return bam_input
 
 rule MergeBams:
-    input: rules.MISOBamList.output
-    output: path.join(STAR_DIR, "merged_alignments", "{condition}", "{condition}.merged.bam")
-    threads: 4
+    input:
+        expand(path.join(STAR_DIR, "alignments", "{sample}", "Aligned.sortedByCoord.out.bam"), sample=SAMPLES)
+    output:
+        path.join(STAR_DIR, "merged_alignments", "{condition}", "{condition}.merged.bam")
     params:
+        bam_input = mergeInput,
         partition = "main",
         nodes = "1",
         ntasks = "4",
@@ -22,14 +23,20 @@ rule MergeBams:
         mem = "8G",
         mail_user = EMAIL,
         mail_type = EMAIL_TYPE
-    conda: "envs/samtools.yml"
-    log: path.join(LOG_DIR, "merge_bams", "{condition}.log")
-    script: "scripts/merge_bams.py"
+    conda:
+        "envs/samtools.yml"
+    log:
+        path.join(LOG_DIR, "merge_bams", "{condition}.log")
+    script:
+        "scripts/merge_bams.py"
 
 rule IndexBam:
-    input: rules.MergeBams.output
-    output: path.join(STAR_DIR, "merged_alignments", "{condition}", "{condition}.merged.bam.bai")
-    threads: 4
+    input:
+        rules.MergeBams.output
+    output:
+        path.join(STAR_DIR, "merged_alignments", "{condition}", "{condition}.merged.bam.bai")
+    threads:
+        4
     params:
         partition = "main",
         nodes = "1",
@@ -38,14 +45,18 @@ rule IndexBam:
         mem = "8G",
         mail_user = EMAIL,
         mail_type = EMAIL_TYPE
-    conda: "envs/samtools.yml"
-    log: path.join(LOG_DIR, "index_bams", "{condition}.log")
-    script: "scripts/index_bams.py"
+    conda:
+        "envs/samtools.yml"
+    log:
+        path.join(LOG_DIR, "index_bams", "{condition}.log")
+    script:
+        "scripts/index_bams.py"
 
 rule MisoRun:
-    input: rules.IndexBam.output
-    output: directory(path.join(MISO_RUN_DIR, "{condition}", "{idx}"))
-    threads: 16
+    input:
+        rules.IndexBam.output
+    output:
+        directory(path.join(MISO_RUN_DIR, "{condition}", "{idx}"))
     params:
         bam = path.join(STAR_DIR, "merged_alignments", "{condition}", "{condition}.merged.bam"),
         idx_dir = path.join(MISO_IDX_DIR, "{idx}_indexed"),
@@ -57,14 +68,22 @@ rule MisoRun:
         mem = "16G",
         mail_user = EMAIL,
         mail_type = EMAIL_TYPE
-    conda: "envs/miso.yml"
-    log: path.join(LOG_DIR, "miso", "run", "{condition}.{idx}.log")
-    script: "scripts/miso_run.py"
+    singularity:
+        "library://agheyd/default/asap:latest"
+    log:
+        path.join(LOG_DIR, "miso", "run", "{condition}.{idx}.log")
+    shell:
+        """
+        miso --run {params.idx_dir} {params.bam} --output-dir {output} --read-len {params.read_len} -p {params.ntasks} &> {log}
+        """
 
 rule MisoSum:
-    input: rules.MisoRun.output
-    output: path.join(MISO_SUM_DIR, "{condition}", "{idx}", "summary", "{idx}.miso_summary")
-    threads: 1
+    input:
+        rules.MisoRun.output
+    output:
+        path.join(MISO_SUM_DIR, "{condition}", "{idx}", "summary", "{idx}.miso_summary")
+    threads:
+        1
     params:
         sample_dir = path.join(MISO_RUN_DIR, "{condition}", "{idx}"),
         output_dir = path.join(MISO_SUM_DIR, "{condition}", "{idx}"),
@@ -75,23 +94,33 @@ rule MisoSum:
         mem = "8G",
         mail_user = EMAIL,
         mail_type = EMAIL_TYPE
-    conda: "envs/miso.yml"
-    log: path.join(LOG_DIR, "miso", "summarize", "{condition}.{idx}.log")
-    script: "scripts/miso_sum.py"
+    conda:
+        "envs/miso.yml"
+    log:
+        path.join(LOG_DIR, "miso", "summarize", "{condition}.{idx}.log")
+    script:
+        "scripts/miso_sum.py"
 
 rule MergeSum:
-    input: expand(path.join(MISO_SUM_DIR, "{condition}", "{idx}", "summary", "{idx}.miso_summary"), condition=CONDITIONS, idx=MISO_IDX_NAMES)
-    output: path.join(MISO_SUM_DIR, "{condition}", "merged_summary", "{condition}.merged.miso_summary")
+    input:
+        expand(path.join(MISO_SUM_DIR, "{condition}", "{idx}", "summary", "{idx}.miso_summary"), condition=CONDITIONS, idx=MISO_IDX_NAMES)
+    output:
+        path.join(MISO_SUM_DIR, "{condition}", "merged_summary", "{condition}.merged.miso_summary")
     params:
         sum_dir = MISO_SUM_DIR,
         condition = "{condition}"
-    conda: "envs/pandas.yml"
-    script: "scripts/merge_sum.py"
+    conda:
+        "envs/pandas.yml"
+    script:
+        "scripts/merge_sum.py"
 
 rule MisoComp:
-    input: expand(path.join(MISO_SUM_DIR, "{condition}", "merged_summary", "{condition}.merged.miso_summary"), condition=CONDITIONS)
-    output: path.join(MISO_COMP_DIR, "{comparison}", "{idx}_vs_{idx}", "bayes-factors", "{idx}_vs_{idx}.miso_bf")
-    threads: 1
+    input:
+        expand(path.join(MISO_SUM_DIR, "{condition}", "merged_summary", "{condition}.merged.miso_summary"), condition=CONDITIONS)
+    output:
+        path.join(MISO_COMP_DIR, "{comparison}", "{idx}_vs_{idx}", "bayes-factors", "{idx}_vs_{idx}.miso_bf")
+    threads:
+        1
     params:
         run_dir = MISO_RUN_DIR,
         comparison = "{comparison}",
@@ -104,23 +133,36 @@ rule MisoComp:
         mem = "8G",
         mail_user = EMAIL,
         mail_type = EMAIL_TYPE
-    conda: "envs/miso.yml"
-    log: path.join(LOG_DIR, "miso", "compare", "{comparison}.{idx}_vs_{idx}.log")
-    script: "scripts/miso_comp.py"
+    conda:
+        "envs/miso.yml"
+    log:
+        path.join(LOG_DIR, "miso", "compare", "{comparison}.{idx}_vs_{idx}.log")
+    script:
+        "scripts/miso_comp.py"
 
 rule MergeComp:
-    input: expand(path.join(MISO_COMP_DIR, "{comparison}", "{idx}_vs_{idx}", "bayes-factors", "{idx}_vs_{idx}.miso_bf"), comparison=COMPARISONS, idx=MISO_IDX_NAMES)
-    output: path.join(MISO_COMP_DIR, "{comparison}", "{comparison}.merged.miso_bf")
-    threads: 1
+    input:
+        expand(path.join(MISO_COMP_DIR, "{comparison}", "{idx}_vs_{idx}", "bayes-factors", "{idx}_vs_{idx}.miso_bf"), comparison=COMPARISONS, idx=MISO_IDX_NAMES)
+    output:
+        path.join(MISO_COMP_DIR, "{comparison}", "{comparison}.merged.miso_bf")
+    threads:
+        1
     params:
         comp_dir = MISO_COMP_DIR,
         comp = "{comparison}"
-    conda: "envs/pandas.yml"
-    script: "scripts/merge_comp.py"
+    conda:
+        "envs/pandas.yml"
+    script:
+        "scripts/merge_comp.py"
 
 rule AddMisoCoord:
-    input: rules.MergeComp.output
-    output: path.join(MISO_COMP_DIR, "{comparison}", "{comparison}.merged.w_coord.miso_bf")
-    threads: 1
-    conda: "envs/pandas.yml"
-    script: "scripts/add_coord.py"
+    input:
+        rules.MergeComp.output
+    output:
+        path.join(MISO_COMP_DIR, "{comparison}", "{comparison}.merged.w_coord.miso_bf")
+    threads:
+        1
+    conda:
+        "envs/pandas.yml"
+    script:
+        "scripts/add_coord.py"
