--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,8 @@
 locations:
 
-  sample_sheet: /home/didrio87/scripts/pipelines/asap/sample_sheet.csv
+  whippet_idx: ""
+  star_idx: ""
+  sample_sheet: /home/didrio87/pipelines/asap/sample_sheet.csv
   annotation: /scratch/didrio87/annotations/mouse/M21/gencode.vM21.annotation.gtf
   fq_dir: /scratch/didrio87/projects/didrik/splicetools/fq/
   genome: /scratch/didrio87/genomes/mouse/GRCm38.p6/GRCm38.primary_assembly.genome.fa
