--- a/workflows/post_process/Snakefile
+++ b/workflows/post_process/Snakefile
@@ -1,8 +1,6 @@
 rule OverlapAll:
     input:
-        miso = path.join(MISO_COMP_DIR, "{comparison}", "{comparison}.merged.w_coord.miso_bf"),
-        rmats = path.join(RMATS_DIR, "results", "{comparison}", "{comparison}.merged.w_coord.tsv"),
-        whippet = path.join(WHIPPET_DIR, "delta", "{comparison}", "{comparison}.diff.gz")
+        get_aggregation_rule
     output:
         path.join(RESULT_DIR, "{comparison}", "overlap.all_tools.tab")
     params:
